--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -3,7 +3,7 @@
 	"name": "rossvideo-xpression",
 	"shortname": "xpression",
 	"description": "Ross Video Xpression plugin for Companion",
-	"version": "2.0.0",
+	"version": "0.0.0",
 	"license": "MIT",
 	"repository": "git+https://github.com/bitfocus/companion-module-rossvideo-xpression.git",
 	"bugs": "https://github.com/bitfocus/companion-module-rossvideo-xpression/issues",
@@ -18,7 +18,7 @@
 		"type": "node18",
 		"api": "nodejs-ipc",
 		"apiVersion": "0.0.0",
-		"entrypoint": "..\\src\\index.js"
+		"entrypoint": "../src/index.js"
 	},
 	"manufacturer": "Ross Video",
 	"products": ["Xpression"],
